🎉auto update by Gmeek action

--- a/backup/冲浪指南.md
+++ b/backup/冲浪指南.md
@@ -23,16 +23,18 @@ aff:
 ## 代理工具
 `IOS用户在不越狱的前提下,可以租用购买过相应软件的外区账号进行下载,这里不做介绍`
 ### 安卓平台
-[SagerNet](https://github.com/dyhkwong/SagerNet) `NekoBox很久没更新了,最近在用这个`  
+[Exclave](https://github.com/dyhkwong/Exclave) `NekoBox很久没更新了,最近在用这个`  
 
 [Hiddify](https://github.com/hiddify/hiddify-next) `最近挺多人推的 我是有点用不惯`
 
 ### Windows平台
-[ClashVergeRev](https://clash-verge-rev.github.io/) `PC还是Clash体验比较好`  
+[ClashVergeRev](https://clash-verge-rev.github.io/) `PC还是Clash用起来简单`  
 
 [Hiddify](https://github.com/hiddify/hiddify-next) `最近挺多人推的 我是有点用不惯`
 ## 一线机场
-> 顶级的线路,卓越的抗攻击性能,专业快速的服务,稳定运营三年以上
+<details>
+<summary>顶级的线路,卓越的抗攻击性能,专业快速的服务,稳定运营三年以上</summary>
+
 - [Nexitally](https://nexitally.com/) `奶昔,佩奇家主站,业界标杆,流媒体解锁 单线支持2000Mbps `
 <details>
 <summary>价格表</summary>
@@ -122,9 +124,11 @@ Global Accelerate Team:
 
 ```
 </details>
+</details>
 
 ## 准一线机场
-> 整体略逊于一线机场 但同样是高端定位 并且稳定运营两年以上
+<details>
+<summary>整体略逊于一线机场 但同样是高端定位 并且稳定运营两年以上</summary>
 
 - [WestData](https://fuqing.cz/clientarea.php) `西部数据(不是卖硬盘的那个) 流媒体解锁 单线支持5000Mbps`
 
@@ -215,9 +219,32 @@ VIP4: 800/年 每月900G流量
     8/50G   15/100G   150/1000G
 ```
 </details>
+</details>
 
 ---
+
 ## 便宜机场
+
+> [!TIP]
+> 由于价格相对便宜,通常这类机场只有最开始的一段时间体验较好,建议月付
+
+<details>
+<summary>优先关注价格，体验不稳定</summary>
+
+- [Tsunami](https://tnet.ws/) 
+> 支持5设备同时在线,三档订阅是相同的节点,季付20元挺便宜,三档订阅都赠送EMBY 解锁流媒体,GPT
+<details>
+<summary>价格表</summary>
+
+```
+CTT.REG.Small: 20/季度 每月100G流量 
+CTT.REG.Medium: 10/月 每月180G流量
+CTT.REG.Large: 25/月 每月470G流量
+```
+</details>
+
+---
+
 - [泡芙云](https://www.paofu.cloud/) `解锁流媒体 价格亲民`
 <details>
 <summary>价格表</summary>
@@ -235,6 +262,7 @@ VIP4: 800/年 每月900G流量
 </details>
 
 ---
+
 - [NaikoCloud](https://naiko.cloud/) `解锁流媒体 价格便宜 无设备数量限制`
 <details>
 <summary>价格表</summary>
@@ -246,23 +274,19 @@ VIP4: 800/年 每月900G流量
 至尊套餐: 99/月 共1500G流量 297/季 共4500G流量 594/半年 共9000G流量 990/年 共18000G流量
 ```
 </details>
+</details>
 
 
 ## 白嫖机场
-> 没有人能拒绝白嫖
 
-[CatCloud](https://web.catcloud.tech/)  
-`每天签到领1~3G流量,进群领优惠码免费订阅公益套餐`  
+> [!TIP]
+> 白嫖套餐通常稳定性未知,建议同时注册多个机场备用
 
-[云鸟](https://niao.icu)  
-`每月100G,进群领优惠码免费订阅公益套餐`  
+|机场|白嫖码|
+| ---- | ---- |
+|[绝绝子](https://www.31465.cfd/)|绝绝子开业大吉| 
+|[玄隐VPN](https://4100594342.玄隐.xyz)|free玄隐|
+|[ASA加速器](https://asa.lol/)|ASA08|
 
-[365Cloud](https://www.365cloud.me/#/login)  
-`68G套餐优惠码(一号一次):68G100%off`  
-
-[流星](https://liuxing22.com/)  
-`20G套餐优惠码(一号一次):888`
-
-一号一次的优惠码用临时邮箱刷注册
 
 <!-- ##{"script":"<script src='https://blog.meekdai.com/assets/GmeekTOC.js'></script>"}## -->
